# llm_in_education

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  auth.py  cache.py  evaluation.py  llm.py  privacy.py  schemas.py  settings.py  storage.py  text_utils.py
backend/benchmark/: __init__.py  runner.py
backend/data/: __init__.py  balancer.py  jfleg_loader.py  span_mapper.py  validation.py  wi_locness_loader.py
backend/evaluation/: __init__.py  errant_eval.py  metrics.py
backend/memory/: __init__.py  embeddings.py  similarity.py
backend/nlp/: __init__.py  diff.py  error_extraction.py  tokenizer.py
backend/observability/: __init__.py  metrics.py
backend/pedagogy/: __init__.py  adaptivity.py  feedback_generator.py  feedback_templates.py  quiz_generator.py
backend/pipeline/: __init__.py  guardrails.py  orchestrator.py
backend/routes/: analytics.py  benchmark.py  evaluation.py  learning.py  poster.py
frontend-vue/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-vue/src/: App.vue  router.js  style.css
frontend-vue/src/composables/: useApiStatus.js  useAuth.js
frontend-vue/src/config/: api.js
frontend-vue/src/pages/: Analytics.vue  Benchmark.vue  (+5 more)
infrastructure/: Dockerfile  Dockerfile.frontend
results/h1_benchmark_outputs/: benchmark_rows.csv  benchmarks.csv
utils/: analyze_benchmark.py  analyze_h2.py  compute_errant_f05.py  simulate_h2_api.py  simulate_h2_extended.py  simulate_h2_ollama.py
(+27 files in other folders)
