[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alao-language-learning"
version = "1.0.0"
description = "ALAO - Adaptive Language Learning System with LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.1",
    "pgvector>=0.2.4",
]

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-dir]
backend = "backend"
